syntax = "proto3";

package echo;
option go_package = "api/echo";

import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";

service EchoService {
  rpc PostEcho (EchoRequest) returns (EchoResponse) {
    option (google.api.http) = {
      post: "/v1/echo/{name}"
      body: "*"
    };
  }
  rpc GetEcho (EchoRequest) returns (EchoResponse) {
    option (google.api.http) = {
      get: "/v1/echo/{name}"
    };
  }
}

message EchoRequest {
  string name = 1;
  repeated string data1 = 2;
  repeated int32 data2 = 3;
  EchoMessageId em_id = 4;
  google.protobuf.BoolValue boolVal = 5;
}

message EchoMessageId {
  string id = 1;
}

message EchoResponse {
  string name = 1;
  repeated string data1 = 2;
  repeated int32 data2 = 3;
  EchoMessageId em_id = 4;
  google.protobuf.BoolValue boolVal = 5;
}

message Error {
  int32 code = 1;
  string message = 2;
  string traceID = 3;
}